<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">something t\'do</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_account">AccountActivity</string>
    <string name="add_interest">I\'ve chosen my interests</string>
    <string name="select_all">Select All</string>
    <string name="unselect_all">Unselect All</string>
    <string name="title_activity_prefs">PreferenceActivity</string>
    <string name="title_set_location">SetLocationActivity</string>
    <string name="title_set_date">SetDateActivity</string>
    <string name="profile_activity">ProfileActivity</string>
    <string name="setdate">Set Date</string>
    <string name="setloc">Set Location</string>
    <string name="GPSAlertDialogTitle">Error!</string>
	<string name="GPSAlertDialogMessage">Unable to get current location. Please check your settings.</string>
	<string name="settings">Settings</string>
	<string name="cancel">Cancel</string>
	<string name="event_title_label">Event:</string>
    <string name="event_detail">Input event details:</string>
    <string name="choose_contact_text">Choose Contact</string>
    <string name="send_notify_text">Send Notification</string>
    <string name="event_date_label">Date:</string>
    <string name="event_location_label">Address:</string>
    <string name="event_detail_label">Details:</string>
    <string name="event_url">Event Website</string>
</resources>
