<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="wrap_content"
  android:orientation="vertical"
  >
  <TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/event_title_label"
    android:textColor="@color/custom_theme_text"
    style="?android:listSeparatorTextViewStyle"
    />
  
  <TextView
    android:id="@+id/event_title"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:textColor="@color/custom_theme_text"
    android:text="@string/event_title_label"
    />
  
  <TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/event_date_label"
    android:textColor="@color/custom_theme_text"
    style="?android:listSeparatorTextViewStyle"
    />
  <TextView
    android:id="@+id/event_date"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:textColor="@color/custom_theme_text"
    android:text="@string/event_date_label"
    />
  
  <TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/event_location_label"
    android:textColor="@color/custom_theme_text"
    style="?android:listSeparatorTextViewStyle"
    />
  <TextView
    android:id="@+id/event_location"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:textColor="@color/custom_theme_text"
    android:text="@string/event_location_label"
    />
  
  <TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:textColor="@color/custom_theme_text"
    android:text="@string/event_detail_label"
    style="?android:listSeparatorTextViewStyle"
    />
  <TextView
    android:id="@+id/event_detail"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:textColor="@color/custom_theme_text"
    android:text="@string/event_detail_label"
    />
  
  <Button android:id="@+id/event_url"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="16dp"
    android:layout_marginRight="16dp"
    android:textColor="@color/custom_theme_text"
    android:text="@string/event_url"
    />
</LinearLayout>